--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -1,14 +1,39 @@
-<mat-toolbar color="primary">
-  <span>Bandeja de salida</span>
-</mat-toolbar>
-<div class="container-fluid">
-  <search-input
+<div class="animate-fadeIn">
+  <mat-toolbar>
+    <span>Bandeja de salida</span>
+    <span class="flex-1"></span>
+    <button mat-icon-button aria-label="Cancel" (click)="cancel()">
+      <mat-icon> cancel_schedule_send</mat-icon>
+    </button>
+  </mat-toolbar>
+  <!-- <search-input
     placeholder="Alterno / Referencia "
     (onSearch)="applyFilter($event)"
-  />
+  /> -->
 
-  <div class="emat-elevation-z8">
+  <div class="mat-elevation-z8 mt-2">
     <table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef class="w-8">
+          <mat-checkbox
+            (change)="$event ? toggleAllRows() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+            [aria-label]="checkboxLabel()"
+          >
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [aria-label]="checkboxLabel(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>No.</th>
         <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
@@ -30,12 +55,25 @@
 
       <!-- Symbol Column -->
       <ng-container matColumnDef="options">
-        <th mat-header-cell *matHeaderCellDef>Symbol</th>
-        <td mat-cell *matCellDef="let element"></td>
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element" class="w-8">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button (click)="send(element)" mat-menu-item [disabled]="!element.isOriginal">
+              <mat-icon>send</mat-icon>
+              <span>Remitir</span>
+            </button>
+          </mat-menu>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell p-3" colspan="4">No se encontraron resultados</td>
+      </tr>
     </table>
 
     <paginator
