--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -2,8 +2,13 @@
   <mat-toolbar>
     <span>Bandeja de salida</span>
     <span class="flex-1"></span>
-    <button mat-icon-button aria-label="Cancel" (click)="cancel()">
-      <mat-icon> cancel_schedule_send</mat-icon>
+    <button
+      mat-icon-button
+      aria-label="Cancel"
+      (click)="cancel()"
+      matTooltip="Cancelar"
+    >
+      <mat-icon> delete</mat-icon>
     </button>
   </mat-toolbar>
   <!-- <search-input
@@ -12,7 +17,7 @@
   /> -->
 
   <div class="mat-elevation-z8 mt-2">
-    <table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
+    <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef class="w-8">
           <mat-checkbox
@@ -20,8 +25,7 @@
             [checked]="selection.hasValue() && isAllSelected()"
             [indeterminate]="selection.hasValue() && !isAllSelected()"
             [aria-label]="checkboxLabel()"
-          >
-          </mat-checkbox>
+          />
         </th>
         <td mat-cell *matCellDef="let row">
           <mat-checkbox
@@ -29,31 +33,63 @@
             (change)="$event ? selection.toggle(row) : null"
             [checked]="selection.isSelected(row)"
             [aria-label]="checkboxLabel(row)"
-          >
-          </mat-checkbox>
+          />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element" class="w-8">
+          @switch (element.status) { @case ('pending') {
+          <mat-icon class="text-orange-400">outgoing_mail</mat-icon>
+          } @case ('rejected') {
+          <mat-icon class="text-red-500">warning</mat-icon>
+          } @default { ? } }
         </td>
       </ng-container>
 
       <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <th mat-header-cell *matHeaderCellDef>Alterno</th>
         <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
       </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="reference">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.isOriginal }}</td>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Documento</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.isOriginal ? "Original" : "Copia" }}
+        </td>
       </ng-container>
 
-      <!-- Weight Column -->
+      <ng-container matColumnDef="reference">
+        <th mat-header-cell *matHeaderCellDef>Proveido</th>
+        <td mat-cell *matCellDef="let element">{{ element.reference }}</td>
+      </ng-container>
+
       <ng-container matColumnDef="sentDate">
-        <th mat-header-cell *matHeaderCellDef>Weight</th>
-        <td mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef>Fecha envio</th>
+        <td mat-cell *matCellDef="let element" class="w-36">
           {{ element.sentDate | date : "short" }}
         </td>
       </ng-container>
 
-      <!-- Symbol Column -->
+      <ng-container matColumnDef="recipient">
+        <th mat-header-cell *matHeaderCellDef>Destinatario</th>
+        <td mat-cell *matCellDef="let element">
+          <div class="flex flex-col gap-y-1">
+            <div>Para: {{ element.recipient.fullname | titlecase }}</div>
+            @if(element.actionLog){
+            <div class="text-red-600">
+              {{ element.actionLog.manager | titlecase }}:
+              <span class="font-bold">
+                {{ element.actionLog.description }}
+              </span>
+            </div>
+            <div>Fecha: {{ element.actionLog.date | date : "short" }}</div>
+            }
+          </div>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="options">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element" class="w-8">
@@ -61,7 +97,11 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button (click)="send(element)" mat-menu-item [disabled]="!element.isOriginal">
+            <button
+              (click)="send(element)"
+              mat-menu-item
+              [disabled]="!element.isOriginal"
+            >
               <mat-icon>send</mat-icon>
               <span>Remitir</span>
             </button>
@@ -72,7 +112,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell p-3" colspan="4">No se encontraron resultados</td>
+        <td class="mat-cell p-3" colspan="8">No se encontraron resultados</td>
       </tr>
     </table>
 
