--- a/src/app/layout/presentation/pages/dashboard/dashboard.component.html
+++ b/src/app/layout/presentation/pages/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
       <navigation-list [menu]="menu" />
     </mat-sidenav>
 
-    <mat-sidenav-content class="sm:p-2">
+    <mat-sidenav-content class="sm:px-2">
       <router-outlet />
     </mat-sidenav-content>
   </mat-sidenav-container>
