--- a/src/app/procedures/presentation/pages/externals-manage/external-detail/external-detail.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/external-detail/external-detail.component.html
@@ -23,9 +23,7 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
   <mat-tab label="Descripcion">
     @if (procedure()) {
-      
-    }
-    <div class="py-4 px-2 sm:px-8">
+    <div class="py-4 sm:px-8">
       <div class="px-2 sm:px-0">
         <h3 class="text-base font-semibold leading-7">
           {{ procedure()?.type }}
@@ -34,12 +32,18 @@
           {{ procedure()?.reference }}
         </p>
       </div>
-      <div class="mt-6 border-t border-gray-100">
+      <div class="mt-6">
         <dl class="divide-y divide-gray-100">
           <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
             <dt class="text-sm font-medium leading-6">ALTERNO:</dt>
             <dd class="mt-1 text-sm leading-6 sm:col-span-2 sm:mt-0">
               {{ procedure()?.code }}
+            </dd>
+          </div>
+          <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+            <dt class="text-sm font-medium leading-6">CITE:</dt>
+            <dd class="mt-1 text-sm leading-6 sm:col-span-2 sm:mt-0">
+              {{ procedure()?.citeCode }}
             </dd>
           </div>
           <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
@@ -49,111 +53,69 @@
             </dd>
           </div>
           <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-            <dt class="text-sm font-medium leading-6">Email address</dt>
+            <dt class="text-sm font-medium leading-6">CANT. HOJAS / ANEXOS:</dt>
             <dd class="mt-1 text-sm leading-6 sm:col-span-2 sm:mt-0">
-              margotfosterexample.com
+              {{ procedure()?.numberOfDocuments }}
             </dd>
           </div>
           <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-            <dt class="text-sm font-medium leading-6">Salary expectation</dt>
+            <dt class="text-sm font-medium leading-6">CREACION:</dt>
             <dd class="mt-1 text-sm leading-6 sm:col-span-2 sm:mt-0">
-              $120,000
+              {{ procedure()?.createdAt | date : "short" }}
             </dd>
           </div>
           <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-            <dt class="text-sm font-medium leading-6">About</dt>
-            <dd class="mt-1 text-sm leading-6 sm:col-span-2 sm:mt-0">
-              Fugiat ipsum ipsum deserunt culpa aute sint do nostrud anim
-              incididunt cillum culpa consequat. Excepteur qui ipsum aliquip
-              consequat sint. Sit id mollit nulla mollit nostrud in ea officia
-              proident. Irure nostrud pariatur mollit ad adipisicing
-              reprehenderit deserunt qui eu.
-            </dd>
-          </div>
-          <div class="px-4 py-2 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-            <dt class="text-sm font-medium leading-6">Attachments</dt>
-            <dd class="mt-2 text-sm sm:col-span-2 sm:mt-0">
-              <ul
-                role="list"
-                class="divide-y divide-gray-100 rounded-md border border-gray-200"
-              >
-                <li
-                  class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
-                >
-                  <div class="flex w-0 flex-1 items-center">
-                    <svg
-                      class="h-5 w-5 flex-shrink-0 text-gray-400"
-                      viewBox="0 0 20 20"
-                      fill="currentColor"
-                      aria-hidden="true"
-                      data-slot="icon"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                    <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                      <span class="truncate font-medium"
-                        >resume_back_end_developer.pdf</span
-                      >
-                      <span class="flex-shrink-0 text-gray-400">2.4mb</span>
-                    </div>
-                  </div>
-                  <div class="ml-4 flex-shrink-0">
-                    <a
-                      href="#"
-                      class="font-medium text-indigo-600 hover:text-indigo-500"
-                      >Download</a
-                    >
-                  </div>
-                </li>
-                <li
-                  class="flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6"
-                >
-                  <div class="flex w-0 flex-1 items-center">
-                    <svg
-                      class="h-5 w-5 flex-shrink-0 text-gray-400"
-                      viewBox="0 0 20 20"
-                      fill="currentColor"
-                      aria-hidden="true"
-                      data-slot="icon"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                        clip-rule="evenodd"
-                      />
-                    </svg>
-                    <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                      <span class="truncate font-medium"
-                        >coverletter_back_end_developer.pdf</span
-                      >
-                      <span class="flex-shrink-0 text-gray-400">4.5mb</span>
-                    </div>
-                  </div>
-                  <div class="ml-4 flex-shrink-0">
-                    <a
-                      href="#"
-                      class="font-medium text-indigo-600 hover:text-indigo-500"
-                      >Download</a
-                    >
-                  </div>
-                </li>
-              </ul>
+            <dt class="text-sm/6 font-medium">SOLICITANTE</dt>
+            <dd class="mt-2 text-sm sm:mt-0">
+              <div class="flex flex-col gap-y-1">
+                @if (procedure()?.applicant?.type==="NATURAL") {
+                <div class="flex flex-row">
+                  <dt class="text-sm font-medium w-20">Nombre:</dt>
+                  <dd class="text-sm sm:mt-0">
+                    {{ procedure()?.fullnameApplicant | titlecase }}
+                  </dd>
+                </div>
+                <div class="flex flex-row">
+                  <dt class="text-sm font-medium w-20">CI:</dt>
+                  <dd class="text-sm sm:mt-0">
+                    {{ procedure()?.applicant?.dni }}
+                  </dd>
+                </div>
+                <div class="flex flex-row">
+                  <dt class="text-sm font-medium w-20">Telefono:</dt>
+                  <dd class="text-sm sm:mt-0">
+                    {{ procedure()?.applicant?.phone }}
+                  </dd>
+                </div>
+                } @else {
+                <div class="flex flex-row">
+                  <dt class="text-sm font-medium w-20">Nombre:</dt>
+                  <dd class="text-sm sm:mt-0">
+                    {{ procedure()?.fullnameApplicant }}
+                  </dd>
+                </div>
+                <div class="flex flex-row">
+                  <dt class="text-sm font-medium w-20">Telefono:</dt>
+                  <dd class="text-sm sm:mt-0">
+                    {{ procedure()?.applicant?.phone }}
+                  </dd>
+                </div>
+                }
+              </div>
             </dd>
           </div>
         </dl>
       </div>
-      <div class="sm:px-8">
-        <ul class="list-disc">
+      <div class="mt-6 px-4 sm:px-0">
+        <p class="font-medium">Requisistos presentados</p>
+        <ul class="list-disc px-4 mt-2">
           @for (item of procedure()?.requirements; track $index) {
           <li>{{ item }}</li>
           }
         </ul>
       </div>
     </div>
+    }
   </mat-tab>
   <mat-tab label="Second">Content 2</mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
