correcion vistas para detalle

--- a/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
@@ -37,10 +37,11 @@
       </p>
       <p>Instruccion / Proveido: {{ communication()?.reference }}</p>
     </mat-card-content>
-    <mat-card-actions>
+    <!-- <mat-card-actions>
       <button mat-button>LIKE</button>
       <button mat-button>SHARE</button>
-    </mat-card-actions>
+    </mat-card-actions> -->
   </mat-card>
   }
 </div>
+<!-- <external-detail></external-detail> -->
