--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -153,7 +153,7 @@
             <button
               (click)="send(element)"
               mat-menu-item
-              [disabled]="!element.isOriginal"
+              [disabled]="!element.isOriginal && element.status!=='rejected'"
             >
               <mat-icon>send</mat-icon>
               <span>Remitir</span>
