--- a/src/app/presentation/components/profile/profile.component.html
+++ b/src/app/presentation/components/profile/profile.component.html
@@ -1,25 +1,29 @@
-<div class="d-flex align-items-center">
-  <div class="flex-shrink-0">
-    <img src="../../../../assets/img/account.png" style="height: 30px" />
+<div class="p-4 pb-6">
+  <div class="flex flex-col gap-y-2 items-center pb-4">
+    <img
+      class="h-auto rounded-full w-16"
+      src="assets/images/account.png"
+      alt="User image"
+    />
+    <span class="text-lg font-bold leading-8">
+      {{ user?.fullname | titlecase }}
+    </span>
+    <span
+      class="rounded-full bg-green-200 py-1 px-2 text-xs font-medium text-green-700"
+    >
+      En linea
+    </span>
   </div>
-  <div class="flex-grow-1 ms-3">
-    <!-- <span class="d-block">{{ user()?.fullname | titlecase }}</span>
-    <small class="d-block">{{ user()?.jobtitle ?? "SIN CARGO" }}</small> -->
-  </div>
-</div>
 
-<mat-nav-list>
-  <a mat-list-item [routerLink]="['settings']" (click)="close()">
-    <mat-icon matListItemIcon>settings</mat-icon>
-    <div matListItemTitle>Configuraciones</div>
-  </a>
-  <a mat-list-item (click)="onLogout.emit()">
-    <mat-icon matListItemIcon>logout</mat-icon>
-    <div matListItemTitle>Cerrar sesion</div>
-  </a>
-</mat-nav-list>
-<div class="mt-3">
-  <a routerLink="info" class="text-decoration-none link-secondary">
-    - Notas de la version
-  </a>
+  <mat-action-list>
+    <button mat-list-item routerLink="/home/settings">
+      <mat-icon matListItemIcon>manage_accounts</mat-icon>
+      <div matListItemTitle>Configuracciones</div>
+    </button>
+    <mat-divider></mat-divider>
+    <button mat-list-item routerLink="home" (click)="logout()">
+      <mat-icon matListItemIcon>logout</mat-icon>
+      <div matListItemTitle>Cerrar sesion</div>
+    </button>
+  </mat-action-list>
 </div>
